[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit-core"]

[project]
dependencies = [
    "alibabacloud_ecs20140526",
    "alibabacloud_rds20140815",
    "alibabacloud_tea_openapi",
    "alibabacloud_waf_openapi20190910",
    "aliyunsdkasapi @ git+https://gitee.com/symowl/alibaba-cloud-apsara-stack-sdk.git@v2.4.7"
]
dynamic = ["description", "version"]
name = "sacc"

[project.sdist]
include = ["NOTICE"]
