[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit-core"]

[project]
authors = [{email = "13601121148@163.com", name = "陈煜"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "alibabacloud_ecs20140526",
    "alibabacloud_rds20140815",
    "alibabacloud_tea_openapi",
    "alibabacloud_waf_openapi20190910",
    "aliyunsdkasapi @ git+https://gitee.com/symowl/alibaba-cloud-apsara-stack-sdk.git@v2.4.7",
]
dynamic = ["description", "version"]
name = "sacc"
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
Source = "https://github.com/symowl/alibaba-cloud-client"
"源代码" = "https://gitee.com/symowl/alibaba-cloud-client"
